# AutoPathGen

./: .clang-format  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  README.md  app.rc  build.iss  index.html  package-lock.json  package.json
src/: App.svelte  app_state.cpp  app_state.h  codegen.cpp  codegen.h  constants.h  field_renderer.cpp  field_renderer.h  main.cpp  popups.cpp  popups.h  raygui.cpp  raygui_config.h  raygui_impl.cpp  sidebar.cpp  sidebar.h  types.cpp  types.h  ui_elements.cpp  ui_elements.h  utils.cpp  utils.h
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: Control.svelte  Top.svelte  side.svelte
